# trading-algo

./: .gitignore  .sample.env  CONTRIBUTING.md  README.md  dispatcher.py  logger.py  orders.py  pyproject.toml
brokers/: base.py  flattrade.py  fyers.py  zerodha.py
strategy/: survivor.py
strategy/configs/: survivor.yml
